# Distill

./: .gitignore  .gitmodules  ARCHITECTURE.md  AppIcon.icns  CLAUDE.md  PLAN-agent-agnostic.md  PLAN_source_preprocessing.md  README.md  build_app.sh  distill.spec  generate_demo.py  launcher.py  pyproject.toml  requirements.txt
coursecraft/: __init__.py  __main__.py  ingest.py  notebook.py  pipeline.py
distill/: __init__.py  __main__.py  claude_pipeline.py  cli.py  diagrams.py  fetch.py  llm.py  mock.py  pipeline.py  prompts.py  publish.py  schemas.py  server.py  sources.py
distill/web/: app.js  index.html  reader.html  reader.js  style.css  test_dag.html  test_iso.html
output/: _analysis.json  _blueprint.json
output/_sources/: manifest.json
output/_sources/focus/: meta.json
output/_sources/ref_01/: meta.json
output/selfcompressing_neural_networks_learning_to_quanti/: README.md  _curriculum.json
output/selfcompressing_neural_networks_learning_to_quanti/module_00_quantization_fundamentals__from_floats_to_fixedpoi/: README.md  ex01_quantize_and_dequantize_the_building_blocks.py  ex02_bitwidth_explorer_precision_vs_compression.py  ex03_naive_rounding_vs_proper_quantization.py
output/selfcompressing_neural_networks_learning_to_quanti/module_01_the_straightthrough_estimator__gradients_through_r/: README.md  ex01_why_rounding_kills_gradients.py  ex02_implement_and_verify_the_ste.py  ex03_ste_with_learnable_quantization_parameters.py
output/selfcompressing_neural_networks_learning_to_quanti/module_02_building_the_qconv2d_layer__learnable_quantization/: README.md  ex01_perchannel_quantized_weights_qweight.py  ex02_qconv2d_forward_pass_with_ste.py  ex03_counting_bits_the_qbits_method.py  ex04_gradient_flow_verification.py
output/selfcompressing_neural_networks_learning_to_quanti/module_03_selfcompression_training_on_mnist/: README.md  ex01_the_compression_loss.py  ex02_train_the_selfcompressing_cnn.py  ex03_analyze_learned_bitwidth_distributions.py
output/turboquant_nearoptimal_vector_quantization_from_th/: README.md  _curriculum.json
scaffoldly/: __init__.py  __main__.py  agent.py  cli.py  fetch.py  ingest.py  llm.py  mock.py  notebook.py  pipeline.py  prompts.py  schemas.py  server.py  sources.py  system_prompt.py  tools.py
scaffoldly/web/: app.js  index.html  style.css  test_dag.html
(+62 files in other folders)
