[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scaffoldly"
version = "0.2.0"
description = "Generate progressive, CS231n-style coursework from technical blogs, repos, and papers"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "claude-agent-sdk>=0.1.50",
    "pydantic>=2.0",
    "anyio>=4.0",
    "httpx>=0.27",
    "starlette>=0.27",
    "uvicorn>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
scaffoldly = "scaffoldly.cli:main"

[dependency-groups]
dev = [
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "scipy>=1.15.3",
]

[tool.hatch.build.targets.wheel]
packages = ["scaffoldly"]

[tool.hatch.build.targets.wheel.shared-data]

[tool.hatch.build]
include = ["scaffoldly/**"]
