[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "distill"
version = "0.3.0"
description = "Generate progressive, CS231n-style coursework from technical blogs, repos, and papers"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "pydantic>=2.0",
    "anyio>=4.0",
    "httpx>=0.27",
    "starlette>=0.27",
    "uvicorn>=0.20",
    "litellm>=1.78.0,<=1.82.6",
    "instructor>=1.7.0",
    "claude-code-sdk>=0.0.25",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
distill = "distill.cli:main"

[dependency-groups]
dev = [
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "scipy>=1.15.3",
]

[tool.hatch.build.targets.wheel]
packages = ["distill"]

[tool.hatch.build.targets.wheel.shared-data]

[tool.hatch.build]
include = ["distill/**"]
